<resources>
    <string name="app_name">GymTrack</string>
    <string name="Name">Name</string>
    <string name="workouts">Workouts</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_category">Workout Category</string>
    <string name="my_workouts">My Workouts</string>
    <string name="new_workout">New Workout</string>
    <string name="workout_description">Workout Description</string>
    <string name="Description">Description</string>
    <string name="Category">Category</string>

    <string name="exercise_name">Exercise Name</string>
    <string name="Sets">Sets</string>
    <string name="sets">sets</string>
    <string name="Weight">lbs</string>
    <string name="weight">weigh</string>
    <string name="Reps">Reps</string>
    <string name="reps">reps</string>

    <string name="alert_tittle">Challenge Yourself!</string>
    <string name="alert_mssg">We noticed that one of the workouts has 10 or more reps. We recommend incrementing the weight and lowering the amount of reps. You are doing great! Work Smarter not Harder.</string>

    <string name="button_add">Add</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="button_finish">Finish</string>
    <string name="button_quick_start">Quick Start</string>
    <string name="button_new_exercise">New Exercise</string>

    <string name="Ready">Ready</string>

    <string-array name="category_options">
        <item>Hard</item>
        <item>Medium</item>
        <item>Easy</item>
    </string-array>


</resources>