<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_layout"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/alert_image"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:contentDescription="Alert Icon"
            android:src="@drawable/gym_icon" />

        <TextView
            android:id="@+id/alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/alert_tittle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/alert_mssg"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_ok" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>